# fncli

./: README.md  justfile  pyproject.toml  pyright.tests.json  pyrightconfig.json
.githooks/: commit-msg  pre-commit
src/: fncli.py
src/fncli/: __init__.py
tests/: test_fncli.py
