[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fncli"
version = "0.0.1"
description = "Function signature as CLI spec. One decorator, zero boilerplate."
requires-python = ">=3.12"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/fncli"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.13.0",
    "pyright>=1.1.408",
]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"

[tool.ruff]
line-length = 100
target-version = "py312"
