[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fncli"
version = "0.0.1"
description = "Function signature as CLI spec. One decorator, zero boilerplate."
requires-python = ">=3.12"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/fncli"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.13.0",
    "pyright>=1.1.408",
]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RET",    # flake8-return
    "S",      # flake8-bandit (security)
    "PTH",    # flake8-use-pathlib
    "PERF",   # perflint
    "RUF",    # ruff-specific
    "TID",    # tidy imports
    "PIE",    # misc lints
    "T20",    # flake8-print
    "FLY",    # flynt (f-strings)
    "FURB",   # refurb (modern python)
    "PLC",    # pylint conventions
]
ignore = [
    "SIM108",   # ternary not always clearer
    "SIM115",   # context manager not always clearer
    "SIM117",   # multiple with statements
    "E501",     # line length (formatter handles)
    "COM812",   # trailing commas (formatter)
    "D100", "D101", "D102", "D103", "D104", "D107",
    "D202", "D209", "D212", "D213", "D401", "D413", "D417",
    "ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "ANN204", "ANN401",
    "FBT001", "FBT002", "FBT003",
    "EM101", "EM102",
    "TRY003", "TRY300", "TRY301", "TRY400", "TRY401",
    "G004", "G201",
    "PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLR2004",
    "ARG001", "ARG004",
    "C901",
    "BLE001",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
    "-v",
]
