[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fncli"
version = "0.0.1"
description = "Function signature as CLI spec. One decorator, zero boilerplate."
requires-python = ">=3.12"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/fncli"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.13.0",
    "pyright>=1.1.408",
]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RET",    # flake8-return
    "S",      # flake8-bandit (security)
    "PTH",    # flake8-use-pathlib
    "PERF",   # perflint
    "RUF",    # ruff-specific
    "TID",    # tidy imports
    "PIE",    # misc lints
    "T20",    # flake8-print
    "FLY",    # flynt (f-strings)
    "FURB",   # refurb (modern python)
    "PLC",    # pylint conventions
]
ignore = [
    "E501",   # line length (formatter handles)
    "ANN401", # Any is required for annotation introspection
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
    "-v",
]
